# SimplePlayer

./: .gitmodules  CMakeLists.txt  README.md
SimplePlayer/: SimplePlayer.cpp  SimplePlayer.qml
res/: SimplePlayer.desktop
src/OnvifProxy/: CMakeLists.txt  OnvifAuthorizedCameraFilterModel.cpp  OnvifAuthorizedCameraFilterModel.hpp  OnvifCamera.cpp  OnvifCamera.hpp  OnvifCameraModel.cpp  OnvifCameraModel.hpp
src/SimplePlayer/: CMakeLists.txt  SimpleAddCameraDialog.qml  SimpleCamera.qml  SimpleInfoDialog.qml  SimpleLoginDialog.qml  SimplePlayer.cpp  SimplePlayer.qml  SimpleSettingsDialog.qml
